Finder: fixed IDE file titles jumping around while loading

--- a/client/ide/styl/ide.finder.styl
+++ b/client/ide/styl/ide.finder.styl
@@ -143,7 +143,7 @@ body.ide
       //   fr()
 
       .kdloader
-        margin        3px 5px 0 5px
+        margin        3px 0 0
         width         20px
 
       &.rename-container
